# motioncam-player

./: CMakeLists.txt  Info.plist  README.md  icon.rc
cmake/: glfw3Config.cmake
delete/: App_old.cpp  RawFrameBuffer_old.h  Renderer_VK_old.cpp  Renderer_VK_old.h
include/App/: App.h  AppConfig.h  AppState.h
include/Audio/: AudioController.h  AudioTypes.h
include/Decoder/: DecoderTypes.h  DecoderWrapper.h
include/Graphics/: Descriptor.h  ImageResource.h  Pipeline.h  Renderer_VK.h  VulkanHelpers.h
include/Gui/: GuiOverlay.h  GuiStyles.h  GuiUtils.h
include/Playback/: PlaybackController.h  PlaybackUtils.h
include/Utils/: DebugLog.h  IconsMaterial.h  RawFrameBuffer.h  SingleInstanceGuard.h  StringUtils.h  ThreadSafeQueue.h  vma_usage.h
motioncam-decoder/lib/: Decoder.cpp  RawData.cpp
motioncam-decoder/lib/include/motioncam/: Decoder.hpp
shaders/: fullscreen_quad.vert  image_process.frag
src/: main.cpp
src/App/: AppCleanup.cpp  AppDecode.cpp  AppIO.cpp  AppInit.cpp  AppInput.cpp  AppLoop.cpp
src/Audio/: AudioController.cpp  AudioHelpers.cpp
src/Decoder/: DecoderWrapper.cpp
src/Graphics/: Descriptor.cpp  ImageResource.cpp  Pipeline.cpp  Renderer_VK.cpp  VulkanHelpers.cpp
src/Gui/: GuiRender.cpp  GuiSetup.cpp  GuiStyles.cpp  GuiUtils.cpp
src/Playback/: PlaybackController.cpp
src/Utils/: DebugLog.cpp  StringUtils.cpp
